syntax = "proto3";

package squirrel.requests.v1;

import "common.proto";

service RequestsService {
  rpc Create(CreateHttpRequestRequest) returns (squirrel.common.v1.HttpRequest);
  rpc Update(UpdateHttpRequestRequest) returns (squirrel.common.v1.HttpRequest);
  rpc Get(GetRequest) returns (squirrel.common.v1.HttpRequest);
  rpc Run(RunRequest) returns (RunResponse);
  rpc History(GetHistoryRequest) returns (HistoryResponse);
  rpc StreamRun(stream StreamRunRequest) returns (stream StreamRunEvent);
}

message CreateHttpRequestRequest {
  string collectionId = 1;
  string name = 2;
  string method = 3;
  string url = 4;
  map<string, string> headers = 5;
  string body = 6;
}

message UpdateHttpRequestRequest {
  string requestId = 1;
  string collectionId = 2;
  string name = 3;
  string method = 4;
  string url = 5;
  map<string, string> headers = 6;
  string body = 7;
}

message GetRequest {
  string requestId = 1;
}

message RunRequest {
  string requestId = 1;
  string environment = 2;
}

message RunResponse {
  string runId = 1;
  string status = 2;
}

message GetHistoryRequest {
  string requestId = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message HistoryResponse {
  repeated squirrel.common.v1.HttpRun items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 pageSize = 4;
}

// Bidirectional streaming for live request execution and incremental responses.
message StreamRunRequest {
  // Either provide an existing requestId or a raw request body to test ad-hoc.
  string requestId = 1;
  string method = 2;
  string url = 3;
  map<string, string> headers = 4;
  string body = 5;
  string environment = 6;
  bool cancel = 7;
}

message StreamRunEvent {
  string runId = 1;
  string phase = 2;        // QUEUED | RUNNING | COMPLETED | FAILED | CANCELLED
  int32 responseCode = 3;
  string responseBody = 4;
  int64 durationMs = 5;
  string error = 6;
  bool terminal = 7;
}
